[1.2.X] Fixed #13723 -- Improved the legibility of hyperlinks included in admin validation error messages. Thanks to Sebastian Noack for the suggestion and patch.
Backport of r13659 from trunk.

git-svn-id: http://code.djangoproject.com/svn/django/branches/releases/1.2.X@13662 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/django/contrib/admin/media/css/base.css
+++ b/django/contrib/admin/media/css/base.css
@@ -478,6 +478,11 @@ ul.errorlist {
     background: red url(../img/admin/icon_alert.gif) 5px .3em no-repeat;
 }
 
+.errorlist li a {
+ 	color: white;
+    text-decoration: underline;
+}
+
 td ul.errorlist {
     margin: 0 !important;
     padding: 0 !important;
